fixed spacing for follow buttons on brand-list page

--- a/apparelrow/media/src/partials/_application.sass
+++ b/apparelrow/media/src/partials/_application.sass
@@ -1407,6 +1407,10 @@ body.brand-list
     &:hover, &:active
       text-decoration: underline
   .sidebar
+    .not_following, .following
+      display: inline-block
+      width: 70px
+      margin-left: 5px
     a.title
       display: inline-block
       clear: both
@@ -1414,6 +1418,7 @@ body.brand-list
         font-weight: bold
         padding: 0.5em 0
     .products
+      margin-top: 5px
       +clearfix
       .product-small
         h4, span
